lib/src/compiler/tests/testdata/errors/4.out
error[E002]: wrong type
 --> line:2:14
  |
2 |   condition: 2.0 % 1 == 1
  |              ^^^ expression should be `integer`, but it is `float`
  |